--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           </button>
         </div>
         <div class="imagen__main">
-          <img src="/images/fitness-jump.svg" alt="hero_image" />
+          <img src="./images/fitness-jump.svg" alt="hero_image" />
         </div>
       </div>
     </main>
@@ -60,7 +60,7 @@
       </div>
     </footer>
     <div class="balls-decoration">
-      <img src="/images/balls-decoration.svg" alt="decoration" />
+      <img src="./images/balls-decoration.svg" alt="decoration" />
     </div>
     <script src="main.js"></script>
   </body>
