--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
             <i class="ri-whatsapp-line ri-xl"></i>
             <p>Start now</p>
           </button>
+          <a href="./CV Santa Clara.pdf" download="cv.pdf"> Descargar PDF </a>
         </div>
         <div class="imagen__main">
           <img src="./images/fitness-jump.svg" alt="hero_image" />
