abrir curriculum en el navegador

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <p>Start now</p>
           </button>
           <a href="./CV Santa Clara.pdf" download="cv.pdf"> Descargar PDF </a>
+          <a href="./CV Santa Clara.pdf" target="_blank"> Curriculum Vitae </a>
         </div>
         <div class="imagen__main">
           <img src="./images/fitness-jump.svg" alt="hero_image" />
